[package]
name = "rust-skse-template"
version = "0.1.0"
edition = "2024"
description = "Modern Rust SKSE plugin template for libskyrim"
authors = ["Your Name"]
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
libskyrim = { git = "https://github.com/Newrite/CommonLib-SkyrimLib.git", branch = "CommonLib-LibSkyrim", features = [
    "se",
    "ae",
] }

[build-dependencies]
winresource = "0.1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true

[package.metadata.winres]
OriginalFilename = "RustSKSETemplate.dll"
ProductName = "Rust SKSE Template"
FileDescription = "Modern Rust SKSE plugin template powered by libskyrim"
